--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
        .sign-up__cta {
         display: block !important;
        }
+       .inner-padding {
+        padding-right: 15px !important;
+        padding-left: 15px !important;
+       }
          /* Order Detail */
        .order-details {
         background-color: #ffffff !important;
@@ -303,7 +307,7 @@
                                         <td class="padding" align="center" valign="top" style="padding: 10px 10px 10px 10px">
                                             <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="center" valign="top" style="padding: 20px 20px 20px 20px">
+                                                    <td class="inner-padding" align="center" valign="top" style="padding: 20px 20px 20px 20px">
                                                         <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800;">
                                                             Get text updates about your delivery. <a href="#" style="color: #000000;"><span class="sign-up__cta" style="text-decoration: underline;">Sign Up</span></a>
                                                         </p>
