--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                 <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                     <tr>
                                         <td class="thank-you__header" align="center" valign="top" style="padding: 60px 0 40px 0">
-                                            <p class="header" style="line-height: 60px; color: #000000; font-size: 50px; font-weight: 800;">
+                                            <p class="header" style="line-height: 60px; color: #000000; font-size: 50px; font-weight: 800; margin: 0;">
                                                 Thank you for <br>
                                                 shopping <br>
                                                 at Patagonia
@@ -283,14 +283,14 @@
                                     </tr>
                                     <tr>
                                         <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
-                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 500;">
+                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 500; margin: 0;">
                                                 Your order is being processed. As soon as it ships, we'll send you a shipping confirmation email with tracking information.
                                             </p>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td class="order" align="center" valign="top" style="padding: 0 95px 60px 95px">
-                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 500;">
+                                            <p  style="line-height: 26px; color: #000000; font-size: 16px; font-weight: 500; margin: 0;">
                                                 We encourage you to go to your order status page and sign up text updates as there may be unexpected delays.
                                             </p>
                                         </td>
@@ -308,7 +308,7 @@
                                             <table role="presentation" width="100%" align="center" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
                                                 <tr>
                                                     <td class="inner-padding" align="center" valign="top" style="padding: 20px 20px 20px 20px">
-                                                        <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800;">
+                                                        <p style="line-height: 22px; color: #000000; font-size: 15px; font-weight: 800; margin: 0;">
                                                             Get text updates about your delivery. <a href="#" style="color: #000000;"><span class="sign-up__cta" style="text-decoration: underline;">Sign Up</span></a>
                                                         </p>
                                                     </td>
