--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@
 </head>
 <body class="body" xml:lang="en" style="width: 100%; table-layout: fixed; margin: 0 auto; padding: 0;">
     <!-- ==========>> Email Start <<==========  -->
+    
+    <!-- Preheader -->
+    <div style="display:none">
+        Your recent purchase at Patagonia is on the way! 
+        &#847; &#847; &#847; &#847; &#847; &#847; &#847; &#847;
+      </div>
+    <!-- /Prehheader -->
+
     <div role="article" aria-roledescription="email" aria-label="email name" lang="en" dir="ltr" style="font-size: medium; font-size: max(16px, 1rem);">
         <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0">
             <tr>
